# openai-latency-regression

./: README.md  citation.cff  gpt-35_analysis.ipynb  gpt-4_analysis.ipynb  gpt-4o_analysis.ipynb  latency_coefficients.csv  pyproject.toml  ref.md  references.bib  references.md  token_latency_functions.py
gpt-3.5-turbo-0125/: input_token_times.csv
gpt-4-0613/: input_token_times.csv  output_token_times.csv
gpt-4o-2024-05-13/: input_token_times.csv
network_latency/: network_latency.ipynb  network_times.json
prompts/: prompts.json
