[tool.poetry]
name = "latency-regression"
version = "1.0.0"
description = "Tools for measuring and modeling OpenAI LLM token latency"
authors = ["FarynWoods"]
readme = "README.md"
license = "GNU GPL 3"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
matplotlib = "^3.10.3"
matplotlib-inline = "^0.1.7"
numpy = "^2.2.5"
openai = "1.78.1"
pandas = "^2.2.3"
plotly = "^6.0.1"
statsmodels = "^0.14.4"
tiktoken = "0.9.0"
jupyter-book = "^1.0.4"
scikit-learn = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
